# billiard

./: .gitignore  package-lock.json  package.json
hardware/: __init__.py  (+1 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/frontend/: .env.example  package-lock.json  package.json  vite.config.js
src-tauri/frontend/src/: App.vue  design-system.css  main.js  style.css
src-tauri/frontend/src/api/: index.js
src-tauri/frontend/src/components/: Layout.vue  OpenTableDialog.vue
src-tauri/frontend/src/i18n/: index.js
src-tauri/frontend/src/router/: index.js
src-tauri/frontend/src/views/: AreaManageView.vue  AttendanceView.vue  BlacklistView.vue  BookingAuditView.vue  BookingKanbanView.vue  BookingManagementView.vue  BookingRemindView.vue  BookingStatsView.vue  CategoryManageView.vue  CostAccountingView.vue  CouponsView.vue  DailyReportView.vue  DashboardView.vue  DataSecurityView.vue  ExportReportsView.vue  FinanceManagementView.vue  FinanceView.vue  FrontDeskView.vue  HardwareView.vue  InventoryManageView.vue  InventorySystemView.vue  LoginView.vue  LossRecordsView.vue  MarketingManagementView.vue  MemberAnalysisView.vue  MemberLevelsView.vue  MemberManagementView.vue  MemberRechargeView.vue  MembersView.vue  OnlineBookingView.vue  OrdersView.vue  PaymentConfigView.vue  PaymentMethodsView.vue  PendingOrdersView.vue  PerformanceView.vue  PermissionsView.vue  PointsMallView.vue  PointsSystemView.vue  ProductsView.vue  PromotionsView.vue  (+19 more)
src-tauri/src/: lib.rs  lib_crate.rs  main.rs
src-tauri/src/lib/db/: mod.rs
src-tauri/src/lib/models/: mod.rs
(+29 files in other folders)
