[package]
name = "billiard-manager"
version = "1.0.0"
description = "台球厅智能管理系统"
authors = ["billiard-manager"]
edition = "2021"

[lib]
name = "billiard_manager_lib"
path = "src/lib_crate.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
bcrypt = "0.15"
hmac = "0.12"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"
thiserror = "2"
dirs = "5"
parking_lot = "0.12"
rusb = "0.9"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
encoding_rs = "0.8.35"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winspool"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
